--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css"/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
     <title>Contact</title>
 </head>
 <body>
@@ -86,7 +91,7 @@
                         </div>
                         <div class="M6 L6 colSep30">
                             <div class="formGroup">
-                                <input class="formEl" type="text" placeholder="Email Address"/>
+                                <input class="formEl" type="email" placeholder="Email Address"/>
                             </div>
                         </div>
                         <div class="formGroup colSep30">
