Added new icons. Modified html and css.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="S12 M6 L6 colSep40">
                             <div class="founderInfo">
                                 <ul class="founderInfoList">
-                                    <li class="founderInfoItem"><b>Name: </b> OkSanych</li>
+                                    <li class="founderInfoItem"><b>Name: </b> Alexandr Oksanych</li>
                                     <li class="founderInfoItem"><b>Age: </b> 24</li>
                                     <li class="founderInfoItem"><b>City: </b> Kiev</li>
                                     <li class="founderInfoItem"><b>Specialization: </b> Front-end</li>
@@ -93,6 +93,10 @@
                                         <span class="founderInfoItemSkill">jQuery</span>
                                         <span class="founderInfoItemSkill">Bootstrap</span>
                                         <span class="founderInfoItemSkill">Git</span>
+                                        <span class="founderInfoItemSkill">Wordpress</span>
+                                        <span class="founderInfoItemSkill">Gulp</span>
+                                        <span class="founderInfoItemSkill">Bower</span>
+                                        <span class="founderInfoItemSkill">Photoshop</span>
                                     </li>
                                 </ul>
                             </div>
@@ -102,15 +106,15 @@
                 <div class="founderWork founderBlock">
                     <h3 class="founderWorkTitle founderTitle">Work experience</h3>
                     <ul class="founderWorkList">
-                        <li class="founderWorkItem">
+                        <li class="founderWorkItem typcn typcn-briefcase">
                             <b>"Credit Collection Group" - Leading specialist in the recovery of debts</b>
                             <p>September 2011 - November 2012</p>
                         </li>
-                        <li class="founderWorkItem">
+                        <li class="founderWorkItem typcn typcn-briefcase">
                             <b>"Credit Collection Group" - Specialist in quality control of contact center holding</b>
                             <p>December 2012 - February 2014</p>
                         </li>
-                        <li class="founderWorkItem">
+                        <li class="founderWorkItem typcn typcn-pencil">
                             <b>Freelancer</b>
                             <p>March 2014 - up to present</p>
                         </li>
@@ -120,27 +124,23 @@
                     <h3 class="founderEducationTitle founderTitle">Education</h3>
 
                     <ul class="founderEducationList">
-                        <li class="founderEducationItem">
+                        <li class="founderEducationItem founderEducationItemUni typcn typcn-mortar-board">
                             <b>KNUTD, Marketing</b>
                             <p>September 2007 - May 2012</p>
                         </li>
-                        <li class="founderEducationItem">
+                        <li class="founderEducationItem founderEducationItemCourse typcn typcn-business-card">
                             <b>Courses STEP - Web-project</b>
                             <p>November 2013 - November 2014</p>
                         </li>
-                        <li class="founderEducationItem">
+                        <li class="founderEducationItem founderEducationItemCourse typcn typcn-business-card">
                             <b>Courses LoftSchool - Front-end</b>
                             <p>December 2013 - February 2014</p>
                         </li>
-                        <li class="founderEducationItem">
+                        <li class="founderEducationItem founderEducationItemCourse typcn typcn-business-card">
                             <b>Courses SvitlaSystems - Front-end</b>
                             <p>February 2013 - March 2014</p>
                         </li>
                     </ul>
-
-                </div>
-                <div class="founderHobby founderBlock">
-                    <h3 class="founderHobbyTitle founderTitle">Other</h3>
                 </div>
             </div>
         </div>
