--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>About</title>
+    <title>Team</title>
 </head>
 <body>
 
