--- a/portfolioPreview.html
+++ b/portfolioPreview.html
@@ -121,6 +121,7 @@
 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/plugins/easyPieChart.js"></script>
 <script src="js/main.js"></script>
 
 </body>
