--- a/svitlapage/index.html
+++ b/svitlapage/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Report</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
     <link rel="stylesheet" href="css/main.css"/>
     <!--[if lt IE 9]>
