Added js for mobile menu, mobile search and category left sidebar.

--- a/tech-category/index.html
+++ b/tech-category/index.html
@@ -27,7 +27,7 @@
                         </a>
                     </div>
                     <!--START header-top menu-->
-                    <nav class="topMenu">
+                    <nav class="topMenu _topMenu">
                         <ul class="topMenuList clearFloat">
                             <li class="topMenuItem _colorElectronics">
                                 <a class="topMenuLink" href="#">ELECTRONICS</a>
@@ -474,10 +474,10 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="headerBtnMobile">
-                            <div class="headerSearchBtnMobile">
+                            <div class="headerSearchBtnMobile _headerSearchBtnMobile">
                                 <span class="icon-search"></span>
                             </div>
-                            <div class="headerMenuBtnMobile">
+                            <div class="headerMenuBtnMobile _headerMenuBtnMobile">
                                 <span class="icon-menu"></span>
                             </div>
                         </div>
@@ -785,7 +785,7 @@
                 <!--END center content block-->
 
                 <!--START right content block-->
-                <div class="col-xs-12 col-sm-12 col-sm-push-1 col-xs-push-1 col-md-3 col-lg-3">
+                <div class="col-xs-12 col-sm-12 col-sm-push-0 col-xs-push-0 col-md-3 col-lg-3">
                     <aside class="mainSidebar">
                         <div class="sidebarBlock sidebarBlock1">
                             <h2 class="sidebarTitle">Find Us On Facebook</h2>
@@ -1012,6 +1012,8 @@
         </div>
     </footer>
     <!--END footer-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 
 </div>
 </body>
