--- a/tech-main/index.html
+++ b/tech-main/index.html
@@ -27,7 +27,7 @@
                         </a>
                     </div>
                     <!--START header-top menu-->
-                    <nav class="topMenu">
+                    <nav class="topMenu _topMenu">
                         <ul class="topMenuList clearFloat">
                             <li class="topMenuItem _colorElectronics">
                                 <a class="topMenuLink" href="#">ELECTRONICS</a>
@@ -474,14 +474,14 @@
                     </div>
                     <div class="col-sm-6">
                            <div class="headerBtnMobile">
-                               <div class="headerSearchBtnMobile">
+                               <div class="headerSearchBtnMobile _headerSearchBtnMobile">
                                    <span class="icon-search"></span>
                                </div>
-                                <div class="headerMenuBtnMobile">
+                                <div class="headerMenuBtnMobile _headerMenuBtnMobile">
                                     <span class="icon-menu"></span>
                                 </div>
                            </div>
-                        <div class="headerSearchWrap hidden-xs">
+                        <div class="headerSearchWrap _headerSearchWrap hidden-xs">
                             <form class="headerSearch" action="">
                                 <input type="text" placeholder="Search..."/>
                                 <div class="headerSearchBtn">
@@ -892,6 +892,9 @@
         </div>
     </footer>
     <!--END footer-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 
 </div>
 </body>
