Fix class name.

--- a/tech-category/index.html
+++ b/tech-category/index.html
@@ -481,7 +481,7 @@
                                 <span class="icon-menu"></span>
                             </div>
                         </div>
-                        <div class="headerSearchWrap hidden-xs">
+                        <div class="headerSearchWrap _headerSearchWrap hidden-xs">
                             <form class="headerSearch" action="">
                                 <input type="text" placeholder="Search..."/>
                                 <div class="headerSearchBtn">
