Changed some html.

--- a/tech-category/index.html
+++ b/tech-category/index.html
@@ -510,17 +510,20 @@
     </header>
     <!--END header-->
 
-    <div class="mainTopBreadCrumbs hidden-xs">
-        <div class="container">
-            <div class="topBreadCrumbs">
-                <a href="#" class="topBreadCrumbsLink">Tech-power.com</a>
-                <a href="#" class="topBreadCrumbsLink">Elecronics</a>
-            </div>
-        </div>
-    </div>
-
     <!--START content-->
     <div class="mainContent">
+
+        <!--START bread crumbs-->
+        <div class="mainTopBreadCrumbs hidden-xs">
+            <div class="container">
+                <div class="topBreadCrumbs">
+                    <a href="#" class="topBreadCrumbsLink">Tech-power.com</a>
+                    <a href="#" class="topBreadCrumbsLink">Elecronics</a>
+                </div>
+            </div>
+        </div>
+        <!--END bread crumbs-->
+
         <div class="container">
             <div class="row">
 
@@ -682,17 +685,17 @@
                                     Apple
                                     <span class="arrow-down"></span>
                                 </h3>
-                              <ul class="rightSidebarList _rightSidebarListDropdown">
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">From Apple released MacBook indescribable beauty</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Apple's Opening Day</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">iPhone spoiled Valentine's Day young American</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">IPAD PRO will be released in September</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">iPhone with the image of a goat</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Apple designs Vehicles</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Apple has received permission delivery of products to Cuba , but in the Crimea for Apple blocked oxygen</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">"Friction" Apple and Motorola for design</a></li>
-                                  <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Blockbuster Technology Apple</a></li>
-                              </ul>
+                                <ul class="rightSidebarList _rightSidebarListDropdown">
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">From Apple released MacBook indescribable beauty</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Apple's Opening Day</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">iPhone spoiled Valentine's Day young American</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">IPAD PRO will be released in September</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">iPhone with the image of a goat</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Apple designs Vehicles</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Apple has received permission delivery of products to Cuba , but in the Crimea for Apple blocked oxygen</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">"Friction" Apple and Motorola for design</a></li>
+                                    <li class="rightSidebarItem"><a class="rightSidebarLink" href="#">Blockbuster Technology Apple</a></li>
+                                </ul>
                             </div>
                             <div class="wrapRightSidebarList">
                                 <h3 class="wrapRightSidebarListTitle _dropdown">
