--- a/tech-single/index.html
+++ b/tech-single/index.html
@@ -510,19 +510,22 @@
     </header>
     <!--END header-->
 
-    <div class="mainTopBreadCrumbs hidden-xs">
-        <div class="container">
-            <div class="topBreadCrumbs">
-                <a href="#" class="topBreadCrumbsLink">Tech-power.com</a>
-                <a href="#" class="topBreadCrumbsLink">Elecronics</a>
-                <a href="#" class="topBreadCrumbsLink">Apple</a>
-                <a href="#" class="topBreadCrumbsLink">From Apple released MacBook indescribable beauty</a>
-            </div>
-        </div>
-    </div>
-
     <!--START content-->
     <div class="mainContent">
+
+        <!--START bread crumbs-->
+        <div class="mainTopBreadCrumbs hidden-xs">
+            <div class="container">
+                <div class="topBreadCrumbs">
+                    <a href="#" class="topBreadCrumbsLink">Tech-power.com</a>
+                    <a href="#" class="topBreadCrumbsLink">Elecronics</a>
+                    <a href="#" class="topBreadCrumbsLink">Apple</a>
+                    <a href="#" class="topBreadCrumbsLink">From Apple released MacBook indescribable beauty</a>
+                </div>
+            </div>
+        </div>
+        <!--END bread crumbs-->
+
         <div class="container">
             <div class="row">
                 <!--START left content block-->
@@ -564,7 +567,7 @@
                                     <select name="" id="">
                                         <option value="">Last</option>
                                         <option value="Lenina">New</option>
-                                     </select>
+                                    </select>
                                 </label>
                             </div>
                         </div>
