Added some js. Fix styles.

--- a/fantik/index.html
+++ b/fantik/index.html
@@ -81,8 +81,8 @@
         <!--START menu-->
         <div class="bottomHeader">
             <div class="container">
-                <nav class="mainMenu">
-                    <ul class="menuList _menuList">
+                <nav class="mainMenu _mainMenu">
+                    <ul class="menuList">
                         <li class="menuItem"><a class="menuItemLink" href="#">Головна</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="#">Кталог взуття</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="#">Оплата</a></li>
