Created 'Contact' page.

--- a/fantik/index.html
+++ b/fantik/index.html
@@ -88,7 +88,7 @@
                         <li class="menuItem"><a class="menuItemLink" href="#">Оплата</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="#">Доставка</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="#">О нас</a></li>
-                        <li class="menuItem"><a class="menuItemLink" href="#">Контакты</a></li>
+                        <li class="menuItem"><a class="menuItemLink" href="contact.html">Контакты</a></li>
                     </ul>
                 </nav>
             </div>
@@ -119,7 +119,6 @@
                 </div>
             </div>
             <!--START new goods-->
-
             <div class="blockNewGoods">
                 <div class="container">
                     <div class="row youSawGlobal">
@@ -298,7 +297,9 @@
                             </ul>
                         </div>
                     </div>
-                    <!--END footer-sign-up-->
+                    <!--END footer-social-->
+
+                    <!--START footer-sign-up-->
                     <div class="col-xs-12 col-sm-12 col-md-5">
                         <div class="footerSignUp">
                             <h3 class="footerSignUpTitle">ПіДПИСАТиСЯ НА НОВини</h3>
@@ -308,7 +309,7 @@
                             </form>
                         </div>
                     </div>
-                    <!--START footer-sign-up--->
+                    <!--END footer-sign-up--->
                 </div>
                 <div class="copyRight">
                     2015 Всі права захищени
