Created 'Single product' page.

--- a/fantik/contact.html
+++ b/fantik/contact.html
@@ -370,7 +370,7 @@
                     <!--END footer-sign-up--->
                 </div>
                 <div class="copyRight">
-                    2015 Всі права захищени
+                    &copy; 2015 Всі права захищени
                 </div>
             </div>
         </div>
