--- a/fantik/index.html
+++ b/fantik/index.html
@@ -107,13 +107,19 @@
                 <div class="row">
                     <div class="advantages">
                         <div class="col-xs-12 col-sm-4">
-                            <img class="advantageImg" src="images/pictures/best-price.jpg" alt=""/>
+                            <a class="advantageLink" href="#">
+                                <img class="advantageImg" src="images/pictures/best-price.jpg" alt=""/>
+                            </a>
                         </div>
                         <div class="col-xs-12 col-sm-4">
-                            <img class="advantageImg" src="images/pictures/best-quality.jpg" alt=""/>
+                            <a class="advantageLink" href="#">
+                                <img class="advantageImg" src="images/pictures/best-quality.jpg" alt=""/>
+                            </a>
                         </div>
                         <div class="col-xs-12 col-sm-4">
-                            <img class="advantageImg" src="images/pictures/wide-range.jpg" alt=""/>
+                            <a class="advantageLink" href="#">
+                                <img class="advantageImg" src="images/pictures/wide-range.jpg" alt=""/>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -312,7 +318,7 @@
                     <!--END footer-sign-up--->
                 </div>
                 <div class="copyRight">
-                    2015 Всі права захищени
+                    &copy; 2015 Всі права захищени
                 </div>
             </div>
         </div>
