Created category page.

--- a/fantik/singlePage.html
+++ b/fantik/singlePage.html
@@ -84,7 +84,7 @@
                 <nav class="mainMenu _mainMenu">
                     <ul class="menuList">
                         <li class="menuItem"><a class="menuItemLink" href="#">Головна</a></li>
-                        <li class="menuItem"><a class="menuItemLink" href="#">Кталог взуття</a></li>
+                        <li class="menuItem"><a class="menuItemLink" href="#">Каталог взуття</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="#">Оплата</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="#">Доставка</a></li>
                         <li class="menuItem"><a class="menuItemLink" href="#">О нас</a></li>
@@ -108,10 +108,10 @@
                         <a class="breadCrumbsLink" href="index.html">Головна</a>
                     </li>
                     <li class="breadCrumbsItem">
-                        <a class="breadCrumbsLink" href="index.html">Для хлопців</a>
+                        <a class="breadCrumbsLink" href="#">Для хлопців</a>
                     </li>
                     <li class="breadCrumbsItem">
-                        <a class="breadCrumbsLink" href="index.html">Текстильне  взуття</a>
+                        <a class="breadCrumbsLink" href="#">Текстильне  взуття</a>
                     </li>
                     <li class="breadCrumbsItem">
                         <span class="breadCrumbsText">265Ф</span>
@@ -229,14 +229,14 @@
                                         <h3 class="productRightTitle">Розмірка</h3>
                                         <div class="productRightFormAmount">
                                             <label for="productAmount" class="productAmount">18-26  <span class="productAmountNumber">(8 шт.)</span></label>
-                                            <input type="number" id="productAmount"/>
+                                            <input type="text" id="productAmount"/>
                                         </div>
                                         <div class="rightFormBottomPrise">
                                             <div class="rightFormPrise rightBottomPrise">140.75 грн</div>
                                             <div class="rightFormPriseReview rightBottomPriseReview">Ціна за шт.</div>
                                         </div>
 
-                                        <button class="productRightFormBtn" type="submit">купити</button>
+                                        <a class="productRightFormBtn">купити</a>
                                     </div>
                                     
                                     <div class="formProductProperties">
