--- a/fantik/catalog.html
+++ b/fantik/catalog.html
@@ -423,7 +423,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="col-xs-12 col-sm-6 col-md-4 clearfix">
                                     <div class="catalogProductWrap">
                                         <div class="catalogProduct">
                                             <a class="blockCatalogProductImg" href="#">
@@ -438,6 +438,8 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="catalogProductWrap">
                                         <div class="catalogProduct">
@@ -483,6 +485,8 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="catalogProductWrap">
                                         <div class="catalogProduct">
@@ -528,6 +532,8 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-xs-12 col-sm-6 col-md-4">
                                     <div class="catalogProductWrap">
                                         <div class="catalogProduct">
