Added two new pages.

--- a/fantik/сallback.html
+++ b/fantik/сallback.html
@@ -110,7 +110,7 @@
                     <form class="callbackForm" action="">
                         <div class="col-sm-12">
                             <div class="callbackFormFields">
-                                <input class="contactFormInput" type="text" placeholder="Ваше П.І.П."/>
+                                <input class="contactFormInput" type="text" placeholder="Ваше П.І.Б."/>
                                 <input class="contactFormInput" type="tel" placeholder="Телефон"/>
                                 <input class="contactFormInput" type="email" placeholder="Ваш email"/>
                                 <textarea class="contactFormText" name="" id="" placeholder="Повідомлення"></textarea>
