--- a/cheshir/user.html
+++ b/cheshir/user.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Главная</title>
+	<title>Пользователь</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-	<!--<link href='http://fonts.googleapis.com/css?family=Cuprum&subset=latin,cyrillic' rel='stylesheet' type='text/css'>-->
+	<link href='http://fonts.googleapis.com/css?family=Cuprum&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 	<!-- [if lt IE 9]
 	<script src="http://oss.maxcdn.com/libs/respond.js/0.4.2/respond.min.js"></script>
@@ -86,99 +86,85 @@
 						<input type="submit" value="поиск">
 					</form>
 				</div>
+
+				<div class="bread_crumbs"><a href="#">Электронная библиотека кота Чешира</a> &#187; <span>Красота и Здоровья</span> </div>
 			</div>
 		</div>
 		
 		<div class="content">
 
-			<div class="popular_book_main">
-				<div class="popular_book">
-					<div class="wrap_h2"><h2 class="h2_center">Популярные книги</h2></div>
-					<div class="books">
-						<div class="book">
-							<p class="book_title">Яркий свет, черные тени. Подлинная история группы АББА</p>
-							<p class="author"><span>Автор:</span> Троцкий Артемий Кивович</p>
-							<img src="images/book_1.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-						<div class="book">
-							<p class="book_title">Приручи своих драконов</p>
-							<p class="author"><span>Автор:</span> Франсуа Лелорд</p>
-							<img src="images/book_2.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-						<div class="book">
-							<p class="book_title">Люди, которые играют в игру</p>
-							<p class="author"><span>Автор:</span> Тони Бьюзен, Барри Бьюзен</p>
-							<img src="images/book_3.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-						<div class="book">
-							<p class="book_title">Путешествие Гектора, или поиск счастья</p>
-							<p class="author"><span>Автор:</span> Стивен Дабнер</p>
-							<img src="images/book_4.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-	
-						<div class="book">
-							<p class="book_title">Яркий свет, черные тени. Подлинная история группы АББА</p>
-							<p class="author"><span>Автор:</span> Троцкий Артемий Кивович</p>
-							<img src="images/book_1.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-						<div class="book">
-							<p class="book_title">Приручи своих драконов</p>
-							<p class="author"><span>Автор:</span> Франсуа Лелорд</p>
-							<img src="images/book_2.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-						<div class="book">
-							<p class="book_title">Люди, которые играют в игру</p>
-							<p class="author"><span>Автор:</span> Тони Бьюзен, Барри Бьюзен</p>
-							<img src="images/book_3.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-						<div class="book">
-							<p class="book_title">Путешествие Гектора, или поиск счастья</p>
-							<p class="author"><span>Автор:</span> Стивен Дабнер</p>
-							<img src="images/book_4.jpg" alt="">
-							<a href="" class="button more_info"><span>подробнее</span></a>
-						</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div class="category_books_main">
+                <div class="category_books user_block_wrap">
+                    <h1 class="user_block_title">Пользователь:</h1>
+                    <div class="user_block">
+                        <div class="user_block_top">
+                            <div class="user_block_img">
+                            <div class="user_img">
+                                <img src="images/user_avatar.jpg" alt=""/>
+                            </div>
+                            <div class="user_link">написать пс</div>
+                            <div class="user_link">отправить e-mail</div>
+                            </div>
+                            <div class="user_block_info">
+                                <div class="user_info_left">
+                                    <p class="user_info_name"><span>Полное имя: </span> Валария</p>
+                                    <p class="user_info_group"><span>Группа: </span> </p>
+                                    <p class="user_info_icq"><span>ICQ: </span> 12345</p>
+                                    <p class="user_info_city"><span>Статус: </span> Пользователь</p>
+                                    <p class="author"><span>Место жительства: </span> Киев</p>
+                                </div>
+                                <div class="user_info_right">
+                                    <p class="user_info_registration"><span>Дата регистрации: </span> 1 января 1970 03:00</p>
+                                    <p class="user_info_last_visit"><span>Последнее посещение: </span> 1 января 1970 03:00</p>
+                                </div>
+                                <p class="user_info_about"><span>Немного о себе: </span> </p>
+                            </div>
+                        </div>
 
-			<div class="category_main">
-				<div class="category">
-					<div class="wrap_h2"><h2 class="h2_center">Книги по жанрам</h2></div>
-					<div class="block_category">
-					<span class="prev">
-						<img src="images/prev.png" alt="">
-					</span>
-					<div class="block_category_ul">
-						<ul class="first_pair">
+                        <div class="user_block_statistic">
+                            <div class="user_statistic_posts">
+                                <span class="statistic_posts">Количество публикаций:</span> <span class="post_number">0</span> [ Просмотреть все публикации ]
+                            </div>
+                            <div class="user_statistic_comments">
+                                <span class="statistic_comments">Количество комментариев:</span> <span class="comments_number">0</span> [ Просмотреть все публикации ]
+                            </div>
+                        </div>
+                        <div class="user_block_button">
+                            <a href="" class="button add_book"><span>добавить книгу</span></a>
+                            <a href="" class="button change_book"><span>обменяться книгой</span></a>
+                        </div>
+                    </div>
+                </div>
+
+				<div class="side_bar_categoty">
+					<div class="side_bar_cat">
+						<h2>Категори книг</h2>
+						<div class="side_bar_decor"></div>
+						<ul>
 							<li><a href="#">Бестселлеры</a></li>
 							<li><a href="#">Бизнес</a></li>
 							<li><a href="#">Детективы и триллеры</a></li>
 							<li><a href="#">Детская литература</a></li>
 							<li><a href="#">Зарубежная литература</a></li>
-						</ul>
-						<ul class="first_pair">
 							<li><a href="#">Исторические романы</a></li>
 							<li><a href="#">История, биография</a></li>
-							<li><a href="#">Красота и здоровье</a></li>
+							<li>
+								<a href="#">Красота и здоровье</a>
+								<ul>
+									<li><a href="">Бестселлеры</a></li>
+									<li><a href="">Зарубежная литература</a></li>
+									<li><a href="">Публицистика</a></li>
+									<li><a href="">Психология, НЛП</a></li>
+									<li><a href="">Современная проза</a></li>
+								</ul>
+							</li>
 							<li><a href="#">Компьютеры</a></li>
 							<li><a href="#">Кулинария</a></li>
-						</ul>
-						<ul class="second_pair">
 							<li><a href="#">Любовные романы</a></li>
 							<li><a href="#">Поэзия</a></li>
 							<li><a href="#">Приключения, путешествия</a></li>
 							<li><a href="#">Психология, НЛП</a></li>
 							<li><a href="#">Публицистика</a></li>
-						</ul>
-						<ul class="second_pair">
 							<li><a href="#">Современная проза</a></li>
 							<li><a href="#">Ужасы и мистика</a></li>
 							<li><a href="#">Фантастика, фентези</a></li>
@@ -186,37 +172,16 @@
 							<li><a href="#">Эротика</a></li>
 						</ul>
 					</div>
-					<span class="next">
-						<img src="images/next.png" alt="">
-					</span>
-					</div>
+				</div>
+			</div>
+			<div class="category_review_main">
+				<div class="category_review">
+					<div class="wrap_h2"><h2 class="h2_left">Информация</h2></div>
+					<p>Ваших публикаций, ожидающих модерации, нет</p>
 				</div>
 			</div>
 
-			<div class="social_main">
-				<div class="social">
-					<div class="wrap_h2"><h2 class="h2_right">Мы в VK</h2></div>
-					<div class="block_social">
-						<img src="images/vk.jpg" alt="">
-					</div>
-				</div>
-			</div>
-
-			<div class="block_about">
-				<div class="wrap_h2"><h2 class="h2_center">Электронная онлайн - библиотека кота Чешира</h2></div>
-				<p>С развитием компьютерных и интернет технологий чтение книг онлайн стало привилегией современного человека. Это удобное занятие позволяет больше не тратить драгоценное время на поиск литературы в городских библиотеках, книжных магазинах и по знакомым. Более того, чтение книг онлайн не требует денежных затрат (помимо подключения к сети Интернет), что является очень приятным моментом. Каждый человек может позволить себе развиваться, обучаться, а то и просто проводить время с хорошими книгами бесплатно.</p>
-
-				<h3>Книги скачать и читать онлайн</h3>
-				<p class="quote">«Чтобы стряхнуть с себя назойливые и несносные мысли, мне достаточно взяться за чтение; оно легко завладевает моим вниманием и прогоняет их прочь».
-				<span class="signature">Шарль Монтескье</span>
-				</p>
-				<p>Читать книги онлайн можно с любого устройства: ПК, планшета, смартфона или с электронной книги.</p>
-				<h3>Доступ для скачивания книг также предоставляеться бесплатно.</h3>
-				<p>Кроме всего прочего, Ваши любимые книги можно скачать для читалки на Ваш гаджет, что позволит Вам держать под рукой «кладезь знаний» без подключения к сети Интернет. Главное, не забудьте установить программу – читалку на Ваше устройство. <br>
-				Кот Чешир собрал в своей электронной онлайн библиотеке лучшие художественные произведения, научную литературу, словари, рефераты, энциклопедии и многое другое. С каждым днем количество первоклассной литературы в онлайн – библиотеке Чеширского кота увеличивается. 
-				Читайте, друзья! Знания – это сила!</p>
-				<p><span class="signature_global">Ваш премудрый библиотекарь, кот Чешиш. Миу</span></p>
-			</div>
+		</div>
 
 			<div class="sorting_main">
 				<div class="sorting">
@@ -439,6 +404,6 @@
 					</div>
 				</div>	
 			</div>
-		</div>
+		</div>	
 </body>
 </html>
